// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// ==============================================================================

// The project-specific configuration schema for this toy project.

edition = "2023";

package brain.evolution.graphs.joy;

import "evolution/lib/experiment_spec.proto";
import "evolution/projects/graphs/generators_spec.proto";
import "evolution/projects/graphs/graph_evolver_spec.proto";
import "evolution/projects/graphs/joy/evaluator_spec.proto";
import "evolution/projects/graphs/joy/simple_hasher_spec.proto";
import "evolution/projects/graphs/mutators_spec.proto";

message JoyWorkerSpec {
  // This extension field is needed so the launcher can interpret this proto.
  extend WorkerSpec {
    JoyWorkerSpec ext =  // When you create your own WorkerSpec, set this field
                         // ID to the CL number where you are first submitting
                         // the change. This guarantees uniqueness. You never
                         // need to modify this line unless you are branching.
        404925348;       // Required.
  }

  // Modify the stuff below this line to suit your project.

  // Hasher used to detect functional changes.
  SimpleHasherSpec simple_hasher = 3;

  GraphEvolverSpec evolver = 1;  // Required.

  JoyEvaluatorSpec evaluator = 2;  // Required.

  // If specified, this is the generator that will be used to evolve. The
  // evolver must not specify any generator in that case.
  GeneratorSpec custom_generator = 4;

  // If specified, this is the mutator that will be used to evolve. The
  // evolver must not specify any mutator in that case.
  MutatorSpec custom_mutator = 5;
}
